--- a/src/PracticeLogGUI.fxml
+++ b/src/PracticeLogGUI.fxml
@@ -6,7 +6,6 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="556.0" prefWidth="628.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <FlowPane prefHeight="49.0" prefWidth="615.0" BorderPane.alignment="CENTER">
@@ -74,6 +73,71 @@
                   <Button mnemonicParsing="false" text="See Full Log" />
                </children>
             </HBox>
+            <Pane prefHeight="8.0" prefWidth="471.0" />
+            <Pane prefHeight="121.0" prefWidth="471.0">
+               <children>
+                  <VBox layoutY="-3.0">
+                     <children>
+                        <HBox layoutY="-3.0">
+                           <children>
+                              <Text layoutY="22.0" strokeType="OUTSIDE" strokeWidth="0.0" text="x.x Hours">
+                                 <font>
+                                    <Font name="System Bold" size="20.0" />
+                                 </font>
+                              </Text>
+                              <Text layoutX="134.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Today">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </HBox>
+                        <HBox layoutY="32.0">
+                           <children>
+                              <Text layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="x.x Hours">
+                                 <font>
+                                    <Font name="System Bold" size="20.0" />
+                                 </font>
+                              </Text>
+                              <Text layoutX="134.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="This Week">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </HBox>
+                        <HBox layoutY="60.0">
+                           <children>
+                              <Text layoutY="82.0" strokeType="OUTSIDE" strokeWidth="0.0" text="x.x Hours">
+                                 <font>
+                                    <Font name="System Bold" size="20.0" />
+                                 </font>
+                              </Text>
+                              <Text layoutX="134.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="This Month">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </HBox>
+                        <HBox layoutX="6.0" layoutY="100.0">
+                           <children>
+                              <Text layoutX="6.0" layoutY="122.0" strokeType="OUTSIDE" strokeWidth="0.0" text="x.x Hours">
+                                 <font>
+                                    <Font name="System Bold" size="20.0" />
+                                 </font>
+                              </Text>
+                              <Text layoutX="134.0" layoutY="122.0" strokeType="OUTSIDE" strokeWidth="0.0" text="This Year">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+               </children>
+            </Pane>
             <Pane prefHeight="16.0" prefWidth="470.0" />
          </children>
       </FlowPane>
