--- a/src/PracticeLogGUI.fxml
+++ b/src/PracticeLogGUI.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="556.0" prefWidth="628.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="697.0" prefWidth="628.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <FlowPane prefHeight="49.0" prefWidth="615.0" BorderPane.alignment="CENTER">
          <children>
@@ -74,70 +74,86 @@
                </children>
             </HBox>
             <Pane prefHeight="8.0" prefWidth="471.0" />
-            <Pane prefHeight="121.0" prefWidth="471.0">
+            <Pane prefHeight="112.0" prefWidth="471.0">
                <children>
                   <VBox layoutY="-3.0">
                      <children>
                         <HBox layoutY="-3.0">
                            <children>
+                              <Text layoutX="134.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Today: ">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Text>
                               <Text layoutY="22.0" strokeType="OUTSIDE" strokeWidth="0.0" text="x.x Hours">
                                  <font>
                                     <Font name="System Bold" size="20.0" />
-                                 </font>
-                              </Text>
-                              <Text layoutX="134.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Today">
-                                 <font>
-                                    <Font size="20.0" />
                                  </font>
                               </Text>
                            </children>
                         </HBox>
                         <HBox layoutY="32.0">
                            <children>
+                              <Text layoutX="134.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last 7 Days: ">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Text>
                               <Text layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="x.x Hours">
                                  <font>
                                     <Font name="System Bold" size="20.0" />
-                                 </font>
-                              </Text>
-                              <Text layoutX="134.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="This Week">
-                                 <font>
-                                    <Font size="20.0" />
                                  </font>
                               </Text>
                            </children>
                         </HBox>
                         <HBox layoutY="60.0">
                            <children>
+                              <Text layoutX="134.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last 30 Days: ">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Text>
                               <Text layoutY="82.0" strokeType="OUTSIDE" strokeWidth="0.0" text="x.x Hours">
                                  <font>
                                     <Font name="System Bold" size="20.0" />
-                                 </font>
-                              </Text>
-                              <Text layoutX="134.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="This Month">
-                                 <font>
-                                    <Font size="20.0" />
                                  </font>
                               </Text>
                            </children>
                         </HBox>
                         <HBox layoutX="6.0" layoutY="100.0">
                            <children>
+                              <Text layoutX="134.0" layoutY="122.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last 365 Days: ">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Text>
                               <Text layoutX="6.0" layoutY="122.0" strokeType="OUTSIDE" strokeWidth="0.0" text="x.x Hours">
                                  <font>
                                     <Font name="System Bold" size="20.0" />
-                                 </font>
-                              </Text>
-                              <Text layoutX="134.0" layoutY="122.0" strokeType="OUTSIDE" strokeWidth="0.0" text="This Year">
-                                 <font>
-                                    <Font size="20.0" />
                                  </font>
                               </Text>
                            </children>
                         </HBox>
                      </children>
                   </VBox>
+                  <Button layoutX="329.0" layoutY="86.0" mnemonicParsing="false" text="More Detailed Analytics" />
                </children>
             </Pane>
+            <Pane prefHeight="40.0" prefWidth="471.0" />
+            <Pane prefHeight="28.0" prefWidth="470.0">
+               <children>
+                  <Text layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Goals">
+                     <font>
+                        <Font size="23.0" />
+                     </font>
+                  </Text>
+               </children>
+            </Pane>
+            <ScrollPane prefHeight="171.0" prefWidth="471.0">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+              </content>
+            </ScrollPane>
             <Pane prefHeight="16.0" prefWidth="470.0" />
          </children>
       </FlowPane>
@@ -145,4 +161,11 @@
    <left>
       <Pane prefHeight="315.0" prefWidth="72.0" BorderPane.alignment="CENTER" />
    </left>
+   <bottom>
+      <Pane prefHeight="21.0" prefWidth="628.0" BorderPane.alignment="CENTER">
+         <children>
+            <Text layoutX="529.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0" text="2015 Plain+Simple" />
+         </children>
+      </Pane>
+   </bottom>
 </BorderPane>
