--- a/src/PracticeLogGUI.fxml
+++ b/src/PracticeLogGUI.fxml
@@ -6,166 +6,5 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="697.0" prefWidth="628.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <top>
-      <FlowPane prefHeight="49.0" prefWidth="615.0" BorderPane.alignment="CENTER">
-         <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Practice Log">
-               <font>
-                  <Font name="Arial Bold" size="60.0" />
-               </font>
-            </Text>
-            <Pane prefHeight="59.0" prefWidth="16.0" />
-            <Button mnemonicParsing="false" prefHeight="56.0" prefWidth="62.0">
-               <graphic>
-                  <ImageView fitHeight="52.0" fitWidth="51.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../Alarm%20Clock%20(Alan%20Cleaver)%20Modified.jpg" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Pane prefHeight="59.0" prefWidth="16.0" />
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="56.0" prefWidth="62.0">
-               <graphic>
-                  <ImageView fitHeight="52.0" fitWidth="51.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../Pencil%20Icon%20(Benn%20Wolfe)%20Modified.jpg" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Pane prefHeight="59.0" prefWidth="16.0" />
-            <Button mnemonicParsing="false" prefHeight="56.0" prefWidth="62.0">
-               <graphic>
-                  <ImageView fitHeight="52.0" fitWidth="51.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../CheckList%20Modified%20(Oliver%20Tacke).jpg" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <Pane prefHeight="8.0" prefWidth="369.0" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Start Practicing!" />
-            <Pane prefHeight="17.0" prefWidth="12.0" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Log a Time" />
-            <Pane prefHeight="17.0" prefWidth="26.0" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Set a Goal" />
-         </children>
-      </FlowPane>
-   </top>
-   <center>
-      <FlowPane prefHeight="334.0" prefWidth="556.0" BorderPane.alignment="CENTER">
-         <children>
-            <VBox>
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Recent Activity">
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                  </Text>
-                  <ListView prefHeight="135.0" prefWidth="470.0" />
-               </children>
-            </VBox>
-            <HBox>
-               <children>
-                  <Pane prefHeight="25.0" prefWidth="390.0" />
-                  <Button mnemonicParsing="false" text="See Full Log" />
-               </children>
-            </HBox>
-            <Pane prefHeight="8.0" prefWidth="471.0" />
-            <Pane prefHeight="112.0" prefWidth="471.0">
-               <children>
-                  <VBox layoutY="-3.0">
-                     <children>
-                        <HBox layoutY="-3.0">
-                           <children>
-                              <Text layoutX="134.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Today: ">
-                                 <font>
-                                    <Font size="20.0" />
-                                 </font>
-                              </Text>
-                              <Text layoutY="22.0" strokeType="OUTSIDE" strokeWidth="0.0" text="x.x Hours">
-                                 <font>
-                                    <Font name="System Bold" size="20.0" />
-                                 </font>
-                              </Text>
-                           </children>
-                        </HBox>
-                        <HBox layoutY="32.0">
-                           <children>
-                              <Text layoutX="134.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last 7 Days: ">
-                                 <font>
-                                    <Font size="20.0" />
-                                 </font>
-                              </Text>
-                              <Text layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="x.x Hours">
-                                 <font>
-                                    <Font name="System Bold" size="20.0" />
-                                 </font>
-                              </Text>
-                           </children>
-                        </HBox>
-                        <HBox layoutY="60.0">
-                           <children>
-                              <Text layoutX="134.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last 30 Days: ">
-                                 <font>
-                                    <Font size="20.0" />
-                                 </font>
-                              </Text>
-                              <Text layoutY="82.0" strokeType="OUTSIDE" strokeWidth="0.0" text="x.x Hours">
-                                 <font>
-                                    <Font name="System Bold" size="20.0" />
-                                 </font>
-                              </Text>
-                           </children>
-                        </HBox>
-                        <HBox layoutX="6.0" layoutY="100.0">
-                           <children>
-                              <Text layoutX="134.0" layoutY="122.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last 365 Days: ">
-                                 <font>
-                                    <Font size="20.0" />
-                                 </font>
-                              </Text>
-                              <Text layoutX="6.0" layoutY="122.0" strokeType="OUTSIDE" strokeWidth="0.0" text="x.x Hours">
-                                 <font>
-                                    <Font name="System Bold" size="20.0" />
-                                 </font>
-                              </Text>
-                           </children>
-                        </HBox>
-                     </children>
-                  </VBox>
-                  <Button layoutX="329.0" layoutY="86.0" mnemonicParsing="false" text="More Detailed Analytics" />
-               </children>
-            </Pane>
-            <Pane prefHeight="40.0" prefWidth="471.0" />
-            <Pane prefHeight="28.0" prefWidth="470.0">
-               <children>
-                  <Text layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Goals">
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                  </Text>
-               </children>
-            </Pane>
-            <ScrollPane prefHeight="171.0" prefWidth="471.0">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-              </content>
-            </ScrollPane>
-            <Pane prefHeight="16.0" prefWidth="470.0" />
-         </children>
-      </FlowPane>
-   </center>
-   <left>
-      <Pane prefHeight="315.0" prefWidth="72.0" BorderPane.alignment="CENTER" />
-   </left>
-   <bottom>
-      <Pane prefHeight="21.0" prefWidth="628.0" BorderPane.alignment="CENTER">
-         <children>
-            <Text layoutX="529.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0" text="2015 Plain+Simple" />
-         </children>
-      </Pane>
-   </bottom>
-</BorderPane>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="927.0" prefWidth="628.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" />
