--- a/src/plainsimple/view/LogView.fxml
+++ b/src/plainsimple/view/LogView.fxml
@@ -14,7 +14,7 @@
                   <Font size="33.0" />
                </font>
             </Text>
-            <Text fx:id="sub_heading" layoutX="248.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="StartDate - EndDate">
+            <Text fx:id="sub_heading" layoutX="248.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="StartDate - EndDate" textAlignment="CENTER">
                <font>
                   <Font name="System Italic" size="12.0" />
                </font>
