--- a/src/plainsimple/view/StartPracticingDialog.fxml
+++ b/src/plainsimple/view/StartPracticingDialog.fxml
@@ -82,7 +82,7 @@
             <Font size="15.0" />
          </font>
       </Button>
-      <Button layoutX="388.0" layoutY="419.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="207.0" text="Reset">
+      <Button layoutX="388.0" layoutY="419.0" mnemonicParsing="false" onAction="#handleReset" prefHeight="35.0" prefWidth="207.0" text="Reset">
          <font>
             <Font size="15.0" />
          </font>
