--- a/src/plainsimple/view/StartPracticingDialog.fxml
+++ b/src/plainsimple/view/StartPracticingDialog.fxml
@@ -11,7 +11,7 @@
    <children>
       <ImageView fitHeight="204.0" fitWidth="264.0" layoutX="297.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@StopWatch1_Modified.png" />
+            <Image url="@StopWatch1_Modified%20(2).png" />
          </image>
       </ImageView>
       <Group layoutY="-9.0">
